[package]
name = "rustorderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.118", features = ["raw_value"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
toml = "0.8.14"
url = "2.5.2"
